Fix navbar dropdown so that it collapses when an option is selected

--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -14,7 +14,6 @@
 
 .DropdownItem {
     display: block;
-    width: 100%;
     padding: 0.25rem 1.5rem;
     clear: both;
     font-weight: 400;
@@ -23,6 +22,10 @@
     white-space: nowrap;
     background-color: transparent;
     border: 0;
+}
+
+.DropdownLink {
+    width: 100%;
 }
 
 .DropdownItem:hover {
